--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header -->
       
-    <div id="home">
+    <div id="home" class="image">
         <h1>Broadway Design</h1>
         <ul>
             <li><a href="#home">Home</a></li>
